# confluent-kafka-addons

./: README.md  install-and-test  pyproject.toml
.github/workflows/: test-on-pull.yml
confluent_kafka_addons/: __init__.py  constants.py  decorators.py  errors.py
confluent_kafka_mixins/: __init__.py
tests/: test_constants.py  test_decorators.py
